--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
   <groupId>com.kurtcan</groupId>
   <artifactId>termchat</artifactId>
   <version>1.0</version>
+  <packaging>jar</packaging>
 
   <name>termchat</name>
 
@@ -39,104 +40,78 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.11</version>
+      <version>4.13.1</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
 
   <build>
-    <pluginManagement>
       <plugins>
         <plugin>
-          <artifactId>maven-clean-plugin</artifactId>
-          <version>3.1.0</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-resources-plugin</artifactId>
-          <version>3.0.2</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.8.0</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.22.1</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-install-plugin</artifactId>
-          <version>2.5.2</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-deploy-plugin</artifactId>
-          <version>2.8.2</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-site-plugin</artifactId>
-          <version>3.7.1</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-project-info-reports-plugin</artifactId>
-          <version>3.0.0</version>
-        </plugin>
-
-        <!-- Other plugins -->
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-maven-plugin</artifactId>
+        <configuration>
+          <excludes>
+            <exclude>
+              <groupId>org.projectlombok</groupId>
+              <artifactId>lombok</artifactId>
+            </exclude>
+          </excludes>
+        </configuration>
+      </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-jar-plugin</artifactId>
-          <version>3.2.0</version>
+          <artifactId>maven-shade-plugin</artifactId>
+          <version>2.4.1</version>
           <executions>
             <execution>
-              <id>server-jar</id>
+              <id>build-first</id>
               <phase>package</phase>
               <goals>
-                <goal>jar</goal>
+                <goal>shade</goal>
               </goals>
               <configuration>
-                <classifier>server</classifier>
-                <includes>
-                  <include>com/kurtcan/server/**</include>
-                </includes>
-                <archive>
-                  <manifest>
+                <transformers>
+                  <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                     <mainClass>com.kurtcan.server.Server</mainClass>
-                  </manifest>
-                </archive>
+                  </transformer>
+                </transformers>
+                <finalName>termchat-server</finalName>
+                <filters>
+                  <filter>
+                    <artifact>*:*</artifact>
+                    <excludes>
+                      <exclude>com/kurtcan/client/**</exclude>
+                    </excludes>
+                  </filter>
+                </filters>
               </configuration>
             </execution>
             <execution>
-              <id>client-jar</id>
+              <id>build-second</id>
               <phase>package</phase>
               <goals>
-                <goal>jar</goal>
+                <goal>shade</goal>
               </goals>
               <configuration>
-                <classifier>client</classifier>
-                <includes>
-                  <include>com/kurtcan/client/**</include>
-                </includes>
-                <archive>
-                  <manifest>
+                <transformers>
+                  <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                     <mainClass>com.kurtcan.client.Client</mainClass>
-                  </manifest>
-                </archive>
+                  </transformer>
+                </transformers>
+                <finalName>termchat-client</finalName>
+                <filters>
+                <filter>
+                  <artifact>*:*</artifact>
+                  <excludes>
+                    <exclude>com/kurtcan/server/**</exclude>
+                  </excludes>
+                </filter>
+              </filters>
               </configuration>
             </execution>
           </executions>
         </plugin>
-        <plugin>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-maven-plugin</artifactId>
-            <configuration>
-                <excludes>
-                    <exclude>
-                        <groupId>org.projectlombok</groupId>
-                        <artifactId>lombok</artifactId>
-                    </exclude>
-                </excludes>
-            </configuration>
-        </plugin>
       </plugins>
-    </pluginManagement>
   </build>
 </project>
