--- a/pom.xml
+++ b/pom.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project
+        xmlns="http://maven.apache.org/POM/4.0.0"
+        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+        xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+>
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.kurtcan</groupId>
     <artifactId>termchat</artifactId>
     <version>1.0</version>
     <packaging>jar</packaging>
-
     <name>termchat</name>
+    <description>Java terminal chat application</description>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -73,11 +75,14 @@
                         <configuration>
                             <transformers>
                                 <transformer
-                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer"
+                                >
                                     <mainClass>com.kurtcan.server.Server</mainClass>
                                 </transformer>
                             </transformers>
                             <finalName>termchat-server</finalName>
+
+                            <!-- Exclude client code -->
                             <filters>
                                 <filter>
                                     <artifact>*:*</artifact>
@@ -97,11 +102,14 @@
                         <configuration>
                             <transformers>
                                 <transformer
-                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer"
+                                >
                                     <mainClass>com.kurtcan.client.Client</mainClass>
                                 </transformer>
                             </transformers>
                             <finalName>termchat-client</finalName>
+
+                            <!-- Exclude server code -->
                             <filters>
                                 <filter>
                                     <artifact>*:*</artifact>
